// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderGolemOverlayPng snapshots (D17) > paints a shout bubble at 1080x1920 1`] = `
"canvas 1x1
font = "700 18px -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif"
canvas 367x459
save()
beginPath()
moveTo(25, 19)
lineTo(33.8, 11)
lineTo(42.6, 19)
lineTo(51.4, 11)
lineTo(60.2, 19)
lineTo(69, 11)
lineTo(77.8, 19)
lineTo(86.6, 11)
lineTo(95.4, 19)
lineTo(104.3, 11)
lineTo(113.1, 19)
lineTo(121.9, 11)
lineTo(130.7, 19)
lineTo(139.5, 11)
lineTo(148.3, 19)
lineTo(157.1, 11)
lineTo(165.9, 19)
lineTo(174.7, 11)
lineTo(183.5, 19)
lineTo(192.3, 11)
lineTo(201.1, 19)
lineTo(209.9, 11)
lineTo(218.7, 19)
lineTo(227.5, 11)
lineTo(236.3, 19)
lineTo(245.1, 11)
lineTo(253.9, 19)
lineTo(262.8, 11)
lineTo(271.6, 19)
lineTo(280.4, 11)
lineTo(289.2, 19)
lineTo(298, 11)
lineTo(306.8, 19)
lineTo(315.6, 11)
lineTo(324.4, 19)
lineTo(333.2, 11)
lineTo(342, 19)
lineTo(350, 28.3)
lineTo(342, 37.7)
lineTo(350, 47)
lineTo(342, 56.3)
lineTo(350, 65.7)
lineTo(342, 75)
lineTo(333.2, 83)
lineTo(324.4, 75)
lineTo(315.6, 83)
lineTo(306.8, 75)
lineTo(298, 83)
lineTo(289.2, 75)
lineTo(280.4, 83)
lineTo(271.6, 75)
lineTo(262.8, 83)
lineTo(253.9, 75)
lineTo(245.1, 83)
lineTo(236.3, 75)
lineTo(227.5, 83)
lineTo(218.7, 75)
lineTo(209.9, 83)
lineTo(201.1, 75)
lineTo(192.3, 83)
lineTo(183.5, 75)
lineTo(174.7, 83)
lineTo(165.9, 75)
lineTo(157.1, 83)
lineTo(148.3, 75)
lineTo(139.5, 83)
lineTo(130.7, 75)
lineTo(121.9, 83)
lineTo(113.1, 75)
lineTo(104.3, 83)
lineTo(95.4, 75)
lineTo(86.6, 83)
lineTo(77.8, 75)
lineTo(69, 83)
lineTo(60.2, 75)
lineTo(51.4, 83)
lineTo(42.6, 75)
lineTo(33.8, 83)
lineTo(25, 75)
lineTo(17, 65.7)
lineTo(25, 56.3)
lineTo(17, 47)
lineTo(25, 37.7)
lineTo(17, 28.3)
closePath()
fillStyle = "#FAFAFB"
fill()
restore()
beginPath()
moveTo(174.7, 81)
lineTo(187.5, 81)
lineTo(181.9, 99)
closePath()
fill()
strokeStyle = "rgba(0, 0, 0, 0.25)"
lineWidth = 2
stroke()
beginPath()
moveTo(25, 19)
lineTo(33.8, 11)
lineTo(42.6, 19)
lineTo(51.4, 11)
lineTo(60.2, 19)
lineTo(69, 11)
lineTo(77.8, 19)
lineTo(86.6, 11)
lineTo(95.4, 19)
lineTo(104.3, 11)
lineTo(113.1, 19)
lineTo(121.9, 11)
lineTo(130.7, 19)
lineTo(139.5, 11)
lineTo(148.3, 19)
lineTo(157.1, 11)
lineTo(165.9, 19)
lineTo(174.7, 11)
lineTo(183.5, 19)
lineTo(192.3, 11)
lineTo(201.1, 19)
lineTo(209.9, 11)
lineTo(218.7, 19)
lineTo(227.5, 11)
lineTo(236.3, 19)
lineTo(245.1, 11)
lineTo(253.9, 19)
lineTo(262.8, 11)
lineTo(271.6, 19)
lineTo(280.4, 11)
lineTo(289.2, 19)
lineTo(298, 11)
lineTo(306.8, 19)
lineTo(315.6, 11)
lineTo(324.4, 19)
lineTo(333.2, 11)
lineTo(342, 19)
lineTo(350, 28.3)
lineTo(342, 37.7)
lineTo(350, 47)
lineTo(342, 56.3)
lineTo(350, 65.7)
lineTo(342, 75)
lineTo(333.2, 83)
lineTo(324.4, 75)
lineTo(315.6, 83)
lineTo(306.8, 75)
lineTo(298, 83)
lineTo(289.2, 75)
lineTo(280.4, 83)
lineTo(271.6, 75)
lineTo(262.8, 83)
lineTo(253.9, 75)
lineTo(245.1, 83)
lineTo(236.3, 75)
lineTo(227.5, 83)
lineTo(218.7, 75)
lineTo(209.9, 83)
lineTo(201.1, 75)
lineTo(192.3, 83)
lineTo(183.5, 75)
lineTo(174.7, 83)
lineTo(165.9, 75)
lineTo(157.1, 83)
lineTo(148.3, 75)
lineTo(139.5, 83)
lineTo(130.7, 75)
lineTo(121.9, 83)
lineTo(113.1, 75)
lineTo(104.3, 83)
lineTo(95.4, 75)
lineTo(86.6, 83)
lineTo(77.8, 75)
lineTo(69, 83)
lineTo(60.2, 75)
lineTo(51.4, 83)
lineTo(42.6, 75)
lineTo(33.8, 83)
lineTo(25, 75)
lineTo(17, 65.7)
lineTo(25, 56.3)
lineTo(17, 47)
lineTo(25, 37.7)
lineTo(17, 28.3)
closePath()
stroke()
beginPath()
moveTo(25, 19)
lineTo(33.8, 11)
lineTo(42.6, 19)
lineTo(51.4, 11)
lineTo(60.2, 19)
lineTo(69, 11)
lineTo(77.8, 19)
lineTo(86.6, 11)
lineTo(95.4, 19)
lineTo(104.3, 11)
lineTo(113.1, 19)
lineTo(121.9, 11)
lineTo(130.7, 19)
lineTo(139.5, 11)
lineTo(148.3, 19)
lineTo(157.1, 11)
lineTo(165.9, 19)
lineTo(174.7, 11)
lineTo(183.5, 19)
lineTo(192.3, 11)
lineTo(201.1, 19)
lineTo(209.9, 11)
lineTo(218.7, 19)
lineTo(227.5, 11)
lineTo(236.3, 19)
lineTo(245.1, 11)
lineTo(253.9, 19)
lineTo(262.8, 11)
lineTo(271.6, 19)
lineTo(280.4, 11)
lineTo(289.2, 19)
lineTo(298, 11)
lineTo(306.8, 19)
lineTo(315.6, 11)
lineTo(324.4, 19)
lineTo(333.2, 11)
lineTo(342, 19)
lineTo(350, 28.3)
lineTo(342, 37.7)
lineTo(350, 47)
lineTo(342, 56.3)
lineTo(350, 65.7)
lineTo(342, 75)
lineTo(333.2, 83)
lineTo(324.4, 75)
lineTo(315.6, 83)
lineTo(306.8, 75)
lineTo(298, 83)
lineTo(289.2, 75)
lineTo(280.4, 83)
lineTo(271.6, 75)
lineTo(262.8, 83)
lineTo(253.9, 75)
lineTo(245.1, 83)
lineTo(236.3, 75)
lineTo(227.5, 83)
lineTo(218.7, 75)
lineTo(209.9, 83)
lineTo(201.1, 75)
lineTo(192.3, 83)
lineTo(183.5, 75)
lineTo(174.7, 83)
lineTo(165.9, 75)
lineTo(157.1, 83)
lineTo(148.3, 75)
lineTo(139.5, 83)
lineTo(130.7, 75)
lineTo(121.9, 83)
lineTo(113.1, 75)
lineTo(104.3, 83)
lineTo(95.4, 75)
lineTo(86.6, 83)
lineTo(77.8, 75)
lineTo(69, 83)
lineTo(60.2, 75)
lineTo(51.4, 83)
lineTo(42.6, 75)
lineTo(33.8, 83)
lineTo(25, 75)
lineTo(17, 65.7)
lineTo(25, 56.3)
lineTo(17, 47)
lineTo(25, 37.7)
lineTo(17, 28.3)
closePath()
fill()
font = "700 18px -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif"
fillStyle = "#0D0D0F"
textAlign = "center"
fillText("WELCOME TO THE HORDE, ANA! GRAB", 183.5, 35.5, 319)
fillText("A SEAT BY THE FIRE.", 183.5, 58.5, 319)
drawImage(<avatar>, 46, 103, 276, 345)"
`;

exports[`renderGolemOverlayPng snapshots (D17) > paints a shout bubble at 1920x1080 1`] = `
"canvas 1x1
font = "700 18px -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif"
canvas 367x459
save()
beginPath()
moveTo(25, 19)
lineTo(33.8, 11)
lineTo(42.6, 19)
lineTo(51.4, 11)
lineTo(60.2, 19)
lineTo(69, 11)
lineTo(77.8, 19)
lineTo(86.6, 11)
lineTo(95.4, 19)
lineTo(104.3, 11)
lineTo(113.1, 19)
lineTo(121.9, 11)
lineTo(130.7, 19)
lineTo(139.5, 11)
lineTo(148.3, 19)
lineTo(157.1, 11)
lineTo(165.9, 19)
lineTo(174.7, 11)
lineTo(183.5, 19)
lineTo(192.3, 11)
lineTo(201.1, 19)
lineTo(209.9, 11)
lineTo(218.7, 19)
lineTo(227.5, 11)
lineTo(236.3, 19)
lineTo(245.1, 11)
lineTo(253.9, 19)
lineTo(262.8, 11)
lineTo(271.6, 19)
lineTo(280.4, 11)
lineTo(289.2, 19)
lineTo(298, 11)
lineTo(306.8, 19)
lineTo(315.6, 11)
lineTo(324.4, 19)
lineTo(333.2, 11)
lineTo(342, 19)
lineTo(350, 28.3)
lineTo(342, 37.7)
lineTo(350, 47)
lineTo(342, 56.3)
lineTo(350, 65.7)
lineTo(342, 75)
lineTo(333.2, 83)
lineTo(324.4, 75)
lineTo(315.6, 83)
lineTo(306.8, 75)
lineTo(298, 83)
lineTo(289.2, 75)
lineTo(280.4, 83)
lineTo(271.6, 75)
lineTo(262.8, 83)
lineTo(253.9, 75)
lineTo(245.1, 83)
lineTo(236.3, 75)
lineTo(227.5, 83)
lineTo(218.7, 75)
lineTo(209.9, 83)
lineTo(201.1, 75)
lineTo(192.3, 83)
lineTo(183.5, 75)
lineTo(174.7, 83)
lineTo(165.9, 75)
lineTo(157.1, 83)
lineTo(148.3, 75)
lineTo(139.5, 83)
lineTo(130.7, 75)
lineTo(121.9, 83)
lineTo(113.1, 75)
lineTo(104.3, 83)
lineTo(95.4, 75)
lineTo(86.6, 83)
lineTo(77.8, 75)
lineTo(69, 83)
lineTo(60.2, 75)
lineTo(51.4, 83)
lineTo(42.6, 75)
lineTo(33.8, 83)
lineTo(25, 75)
lineTo(17, 65.7)
lineTo(25, 56.3)
lineTo(17, 47)
lineTo(25, 37.7)
lineTo(17, 28.3)
closePath()
fillStyle = "#FAFAFB"
fill()
restore()
beginPath()
moveTo(174.7, 81)
lineTo(187.5, 81)
lineTo(181.9, 99)
closePath()
fill()
strokeStyle = "rgba(0, 0, 0, 0.25)"
lineWidth = 2
stroke()
beginPath()
moveTo(25, 19)
lineTo(33.8, 11)
lineTo(42.6, 19)
lineTo(51.4, 11)
lineTo(60.2, 19)
lineTo(69, 11)
lineTo(77.8, 19)
lineTo(86.6, 11)
lineTo(95.4, 19)
lineTo(104.3, 11)
lineTo(113.1, 19)
lineTo(121.9, 11)
lineTo(130.7, 19)
lineTo(139.5, 11)
lineTo(148.3, 19)
lineTo(157.1, 11)
lineTo(165.9, 19)
lineTo(174.7, 11)
lineTo(183.5, 19)
lineTo(192.3, 11)
lineTo(201.1, 19)
lineTo(209.9, 11)
lineTo(218.7, 19)
lineTo(227.5, 11)
lineTo(236.3, 19)
lineTo(245.1, 11)
lineTo(253.9, 19)
lineTo(262.8, 11)
lineTo(271.6, 19)
lineTo(280.4, 11)
lineTo(289.2, 19)
lineTo(298, 11)
lineTo(306.8, 19)
lineTo(315.6, 11)
lineTo(324.4, 19)
lineTo(333.2, 11)
lineTo(342, 19)
lineTo(350, 28.3)
lineTo(342, 37.7)
lineTo(350, 47)
lineTo(342, 56.3)
lineTo(350, 65.7)
lineTo(342, 75)
lineTo(333.2, 83)
lineTo(324.4, 75)
lineTo(315.6, 83)
lineTo(306.8, 75)
lineTo(298, 83)
lineTo(289.2, 75)
lineTo(280.4, 83)
lineTo(271.6, 75)
lineTo(262.8, 83)
lineTo(253.9, 75)
lineTo(245.1, 83)
lineTo(236.3, 75)
lineTo(227.5, 83)
lineTo(218.7, 75)
lineTo(209.9, 83)
lineTo(201.1, 75)
lineTo(192.3, 83)
lineTo(183.5, 75)
lineTo(174.7, 83)
lineTo(165.9, 75)
lineTo(157.1, 83)
lineTo(148.3, 75)
lineTo(139.5, 83)
lineTo(130.7, 75)
lineTo(121.9, 83)
lineTo(113.1, 75)
lineTo(104.3, 83)
lineTo(95.4, 75)
lineTo(86.6, 83)
lineTo(77.8, 75)
lineTo(69, 83)
lineTo(60.2, 75)
lineTo(51.4, 83)
lineTo(42.6, 75)
lineTo(33.8, 83)
lineTo(25, 75)
lineTo(17, 65.7)
lineTo(25, 56.3)
lineTo(17, 47)
lineTo(25, 37.7)
lineTo(17, 28.3)
closePath()
stroke()
beginPath()
moveTo(25, 19)
lineTo(33.8, 11)
lineTo(42.6, 19)
lineTo(51.4, 11)
lineTo(60.2, 19)
lineTo(69, 11)
lineTo(77.8, 19)
lineTo(86.6, 11)
lineTo(95.4, 19)
lineTo(104.3, 11)
lineTo(113.1, 19)
lineTo(121.9, 11)
lineTo(130.7, 19)
lineTo(139.5, 11)
lineTo(148.3, 19)
lineTo(157.1, 11)
lineTo(165.9, 19)
lineTo(174.7, 11)
lineTo(183.5, 19)
lineTo(192.3, 11)
lineTo(201.1, 19)
lineTo(209.9, 11)
lineTo(218.7, 19)
lineTo(227.5, 11)
lineTo(236.3, 19)
lineTo(245.1, 11)
lineTo(253.9, 19)
lineTo(262.8, 11)
lineTo(271.6, 19)
lineTo(280.4, 11)
lineTo(289.2, 19)
lineTo(298, 11)
lineTo(306.8, 19)
lineTo(315.6, 11)
lineTo(324.4, 19)
lineTo(333.2, 11)
lineTo(342, 19)
lineTo(350, 28.3)
lineTo(342, 37.7)
lineTo(350, 47)
lineTo(342, 56.3)
lineTo(350, 65.7)
lineTo(342, 75)
lineTo(333.2, 83)
lineTo(324.4, 75)
lineTo(315.6, 83)
lineTo(306.8, 75)
lineTo(298, 83)
lineTo(289.2, 75)
lineTo(280.4, 83)
lineTo(271.6, 75)
lineTo(262.8, 83)
lineTo(253.9, 75)
lineTo(245.1, 83)
lineTo(236.3, 75)
lineTo(227.5, 83)
lineTo(218.7, 75)
lineTo(209.9, 83)
lineTo(201.1, 75)
lineTo(192.3, 83)
lineTo(183.5, 75)
lineTo(174.7, 83)
lineTo(165.9, 75)
lineTo(157.1, 83)
lineTo(148.3, 75)
lineTo(139.5, 83)
lineTo(130.7, 75)
lineTo(121.9, 83)
lineTo(113.1, 75)
lineTo(104.3, 83)
lineTo(95.4, 75)
lineTo(86.6, 83)
lineTo(77.8, 75)
lineTo(69, 83)
lineTo(60.2, 75)
lineTo(51.4, 83)
lineTo(42.6, 75)
lineTo(33.8, 83)
lineTo(25, 75)
lineTo(17, 65.7)
lineTo(25, 56.3)
lineTo(17, 47)
lineTo(25, 37.7)
lineTo(17, 28.3)
closePath()
fill()
font = "700 18px -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif"
fillStyle = "#0D0D0F"
textAlign = "center"
fillText("WELCOME TO THE HORDE, ANA! GRAB", 183.5, 35.5, 319)
fillText("A SEAT BY THE FIRE.", 183.5, 58.5, 319)
drawImage(<avatar>, 46, 103, 276, 345)"
`;

exports[`renderGolemOverlayPng snapshots (D17) > paints a speech bubble at 1080x1920 1`] = `
"canvas 1x1
font = "500 18px -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif"
canvas 367x459
save()
beginPath()
roundRect(17, 11, 333, 72, 13)
fillStyle = "#FAFAFB"
fill()
restore()
beginPath()
moveTo(171.5, 81)
lineTo(189.1, 81)
lineTo(183.5, 99)
closePath()
fill()
strokeStyle = "rgba(0, 0, 0, 0.25)"
lineWidth = 2
stroke()
beginPath()
roundRect(17, 11, 333, 72, 13)
stroke()
beginPath()
roundRect(17, 11, 333, 72, 13)
fill()
font = "500 18px -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif"
fillStyle = "#0D0D0F"
textAlign = "center"
fillText("Welcome to the horde, Ana! Grab", 183.5, 35.5, 319)
fillText("a seat by the fire.", 183.5, 58.5, 319)
drawImage(<avatar>, 46, 103, 276, 345)"
`;

exports[`renderGolemOverlayPng snapshots (D17) > paints a speech bubble at 1920x1080 1`] = `
"canvas 1x1
font = "500 18px -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif"
canvas 367x459
save()
beginPath()
roundRect(17, 11, 333, 72, 13)
fillStyle = "#FAFAFB"
fill()
restore()
beginPath()
moveTo(171.5, 81)
lineTo(189.1, 81)
lineTo(183.5, 99)
closePath()
fill()
strokeStyle = "rgba(0, 0, 0, 0.25)"
lineWidth = 2
stroke()
beginPath()
roundRect(17, 11, 333, 72, 13)
stroke()
beginPath()
roundRect(17, 11, 333, 72, 13)
fill()
font = "500 18px -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif"
fillStyle = "#0D0D0F"
textAlign = "center"
fillText("Welcome to the horde, Ana! Grab", 183.5, 35.5, 319)
fillText("a seat by the fire.", 183.5, 58.5, 319)
drawImage(<avatar>, 46, 103, 276, 345)"
`;

exports[`renderGolemOverlayPng snapshots (D17) > paints a thought bubble at 1080x1920 1`] = `
"canvas 1x1
font = "500 18px -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif"
canvas 367x459
save()
beginPath()
roundRect(17, 11, 333, 72, 25)
fillStyle = "#FAFAFB"
fill()
restore()
beginPath()
roundRect(17, 11, 333, 72, 25)
strokeStyle = "rgba(0, 0, 0, 0.25)"
lineWidth = 2
stroke()
beginPath()
roundRect(17, 11, 333, 72, 25)
fill()
beginPath()
arc(174.5, 90.4, 5.4, 0, 6.3)
fill()
stroke()
beginPath()
arc(163.7, 95.8, 3.2, 0, 6.3)
fill()
stroke()
font = "500 18px -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif"
fillStyle = "#0D0D0F"
textAlign = "center"
fillText("Welcome to the horde, Ana! Grab", 183.5, 35.5, 319)
fillText("a seat by the fire.", 183.5, 58.5, 319)
drawImage(<avatar>, 46, 103, 276, 345)"
`;

exports[`renderGolemOverlayPng snapshots (D17) > paints a thought bubble at 1920x1080 1`] = `
"canvas 1x1
font = "500 18px -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif"
canvas 367x459
save()
beginPath()
roundRect(17, 11, 333, 72, 25)
fillStyle = "#FAFAFB"
fill()
restore()
beginPath()
roundRect(17, 11, 333, 72, 25)
strokeStyle = "rgba(0, 0, 0, 0.25)"
lineWidth = 2
stroke()
beginPath()
roundRect(17, 11, 333, 72, 25)
fill()
beginPath()
arc(174.5, 90.4, 5.4, 0, 6.3)
fill()
stroke()
beginPath()
arc(163.7, 95.8, 3.2, 0, 6.3)
fill()
stroke()
font = "500 18px -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif"
fillStyle = "#0D0D0F"
textAlign = "center"
fillText("Welcome to the horde, Ana! Grab", 183.5, 35.5, 319)
fillText("a seat by the fire.", 183.5, 58.5, 319)
drawImage(<avatar>, 46, 103, 276, 345)"
`;
